<?xml version="1.0"?>
<package format="2">
  <name>seed_ros_controller</name>
  <version>0.0.1</version>
  <description>The seed_ros_controller package</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>angles</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>

  <depend>seed_solutions_sdk</depend>

</package>
